remove modernizr and update HTML to cross browser issues

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 	<link rel="stylesheet" href="styles/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/bootstrap-responsive.min.css">
 	<link rel="stylesheet" href="styles/main.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
 	
-	<header role="header">
+	<div role="header">
 		<div class="container">
 			<h1>Home Assignment</h1>
 			<hr>
 		</div>
-	</header>
+	</div>
 	<div id="main">
 		<div class="container">
 			<h2>Popular destinations</h2>
@@ -30,12 +29,12 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+	<div>
 		<div class="container">
 			<hr>
 			<div>2013 &copy; <a href="pull-left" href="http://egermano.com">Bruno Germano</a></div>
 		</div>
-	</footer>
+	</div>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
